[tool.poetry]
name = "aws-kms-ethereum-accounts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.51.1"
constructs = ">=10.0.0,<11.0.0"
boto3 = "1.17.103"
web3 = "5.23.0"
eth-account = "0.5.9"
asn1tools = "0.158.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
